공지 - 공지 업데이트 시각 추가

--- a/board.html
+++ b/board.html
@@ -44,6 +44,7 @@
                       <i class="icon-exclamation fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                       <h5 class="font-weight-normal">2024년 10월 20일, 두근두근 서비스의 제공이 중단됩니다.</h5>
                       <p class="mb-4" style="word-break:keep-all;">그동안 이용해 주셔서 감사합니다.</p>
+                      <p class="mb-4 small" style="word-break:keep-all;">2024-09-12 09:18</p>
                     </div>
                   </div>                  
                   <div class="row">
@@ -51,6 +52,7 @@
                       <i class="icon-exclamation fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                       <h5 class="font-weight-normal">AQR서비스가 업데이트 되었습니다!</h5>
                       <p class="mb-4" style="word-break:keep-all;"><a href="https://aq.gy">AQR 홈페이지</a>에서 상세내용을 확인하세요!</p>
+                      <p class="mb-4 small" style="word-break:keep-all;">2024-08-15 10:20</p>
                     </div>
                   </div>                  
                </div>
