갑조네 파트너 추가

--- a/main.html
+++ b/main.html
@@ -315,7 +315,7 @@
                 <div class="logo">
                   <a href="//k-vic.co.kr" target="_blank"><img src="assets/img/partners_logo_kivc.png" class="bordered border-secondary p-1" alt="한국벤처투자(주)" /></a>
                 </div>
-                <div class="logo"></div>
+                <div class="logo">
                   <a href="//mojongsijang.com/" target="_blank"><img src="assets/img/partners_logo_gapjone.png" class="bordered border-secondary p-1" alt="갑조네" /></a>
                 </div>
                 <div class="logo">
