갑조네 파트너 추가

--- a/about.html
+++ b/about.html
@@ -287,6 +287,9 @@
                      <a href="//k-vic.co.kr" target="_blank"><img src="assets/img/partners_logo_kivc.png" class="bordered border-secondary p-1" alt="한국벤처투자(주)" /></a>
                     </div>
                     <div class="logo">
+                      <a href="//mojongsijang.com/" target="_blank"><img src="assets/img/partners_logo_gapjone.png" class="bordered border-secondary p-1" alt="갑조네" /></a>
+                    </div>
+                    <div class="logo">
                      <a href="//www.cku.ac.kr" target="_blank"><img src="assets/img/partners_logo_cku.png" class="bordered border-secondary p-1" alt="가톨릭관동대학교" /></a>
                     </div>
                     <div class="logo">
