--- a/about.html
+++ b/about.html
@@ -43,7 +43,20 @@
                 <div class="col-lg-8 py-8 pl-md-10 text-left">
                   <div class="image image-overlay" style="background-image:url(assets/img/about_2.png)"></div>
                   <div class="accordion-group accordion-group-steps text-white" data-accordion-group>
-                    <div class="accordion open" data-accordion>
+                    <div class="accordion open" data-accordion></div>
+                      <div class="accordion-control" data-control>
+                        <h5>2024년</h5>
+                      </div>
+                      <div class="accordion-content" data-content>
+                        <div class="accordion-content-wrapper">
+                          <p>
+                            <span>9월</span><br />
+                            식물 전문 기술 및 이커머스 기업 (주)갑조네와 제휴협약
+                          </p>
+                        </div>                        
+                      </div>
+                    </div>
+                    <div class="accordion" data-accordion>
                       <div class="accordion-control" data-control>
                         <h5>2023년</h5>
                       </div>
@@ -204,7 +217,7 @@
                   <h4 class="font-weight-normal mb-2">Our Story</h4>
                   <p class="text-dark mb-0">Vision, AR, Big Data, AI</p>
                   <p>데이터를 이해하고 가치를 발굴하며 인공지능을 디자인합니다.</p>
-                  <p class="text-dark mb-0">Software and Hardware</p>
+                  <p class="text-dark mb-0">We develop software</p>
                   <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해합니다.</p>
                 </div>
               </div>
