--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,7 @@
                <div class="col-md-6 py-10 pl-md-10 text-center text-md-left">
                  <i class="icon-question fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                  <h5 class="font-weight-normal">상담 및 문의</h5>
-                 <p class="mb-4">신속하게 검토하여 답신드리겠습니다.</p>
-                 <p>분야 선택 후 내용을 작성해주세요.</p>
+                 <p class="mb-4">문의 내용을 작성해주세요.</p>                 
                  
                  <!-- 문의하기 폼 -->
                  <form role="form" method="post" id="email_up"> 
