--- a/main.html
+++ b/main.html
@@ -245,7 +245,7 @@
               <div class="row separated">
                 <div class="col-lg-6 py-8 pr-md-10">                  
                   <h2 class="h2">APLY</h2>
-                  <p class="lead">Advanced platform to fly<br />APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
+                  <p class="lead">Advanced platform to fly</p>
                   <a href="/?p=about"><button type="button" class="btn btn-with-ico btn-secondary mt-2" data-aos="fade-up" data-aos-delay="30">Learn more  <i class="icon-arrow-right2"></i></button></a>
                 </div>
                 <div class="col-lg-6 py-8 pl-md-10 text-left">
@@ -254,7 +254,7 @@
                     데이터를 이해하고 가치를 발굴하며 인공지능을 디자인합니다.<br />
                     데이터 분석/이상탐지(Anomaly Detection)/AR 기술을 기반으로 문제를 간편하게 확인하고 인사이트를 얻을 수 있는 방법을 제공합니다.
                   </p>
-                  <p class="text-dark mb-0">Software and Hardware</p>
+                  <p class="text-dark mb-0">We develop software</p>
                   <p class="mb-3">최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
                   <a href="/?p=recruit"><div class="btn btn-secondary" data-aos="fade-up" data-aos-delay="50">채용 문의</div></a> 
                 </div>
@@ -338,7 +338,7 @@
             <div class="row mb-8">
               <div class="col-12 text-center">
                 <h4><b>상담 및 문의</b></h4>
-                <p class="lead">어플라이의 도움이 필요하세요? <br />분야 선택 후 문의 내용을 작성해주세요.</p>
+                <p class="lead">문의 내용을 작성해주세요.</p>
               </div>
             </div>  
             <div class="row justify-content-center mb-2">
