문구 수정 - 버그 수정

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 <div class="col-lg-8 py-8 pl-md-10 text-left">
                   <div class="image image-overlay" style="background-image:url(assets/img/about_2.png)"></div>
                   <div class="accordion-group accordion-group-steps text-white" data-accordion-group>
-                    <div class="accordion open" data-accordion></div>
+                    <div class="accordion open" data-accordion>
                       <div class="accordion-control" data-control>
                         <h5>2024년</h5>
                       </div>
