about : aqr 등록계좌 1만 개 돌파 문구 추가

--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
                         <div class="accordion-content-wrapper">
                           <p>
                             <span>9월</span><br />
-                            식물 전문 기술 및 이커머스 기업 (주)갑조네와 제휴협약
+                            식물 전문 기술 및 이커머스 기업 (주)갑조네와 제휴협약,
+                            AQR 서비스 등록 계좌 정보 1만 개 돌파
                           </p>
                         </div>                        
                       </div>
