main page updated

--- a/main.html
+++ b/main.html
@@ -220,7 +220,7 @@
             </div>
             <div class="col-lg-7 blockquote-list">
               <blockquote class="blockquote blockquote-2 boxed" data-aos="fade-up">
-                <p>어플라이 QR 기반 송금서비스 등록계좌 1000돌파...자영업자 호응</p>
+                <p>어플라이, 무설치 송금서비스 ‘AQR’ 등록 계좌수 1만개 돌파<br />다양한 QR 하나로 제공…암호화폐 결제도 지원<br />美 진출도 준비…캘리포니아주 제휴 기업 협업</p>
                 <footer class="blockquote-footer">AQR - 이데일리</footer>
               </blockquote>
               <blockquote class="blockquote blockquote-2 boxed" data-aos="fade-up">
