main page updated

--- a/main.html
+++ b/main.html
@@ -2,70 +2,65 @@
       <section class="p-0" data-top-top="transform: translateY(0px);" data-top-bottom="transform: translateY(200px);">
         <div class="swiper-container mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide vh-80">
+            <div class="swiper-slide vh-85">
               <div class="image image-overlay image-zoom" style="background-image:url(assets/img/main_cover_1.jpg)"></div>
               <div class="caption text-white">
                 <div class="container">
-                  <div class="row align-items-end justify-content-center vh-80 pb-4">
+                  <div class="row align-items-end justify-content-center vh-85 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">Only, Software.</h1>
-                      <p class="lead mb-8 text-white" data-aos="fade-up" data-aos-delay="100">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
                 </div>  
               </div>
             </div>
-            <div class="swiper-slide vh-80">
+            <div class="swiper-slide vh-85">
               <div class="image image-overlay image-zoom" style="background-image:url(assets/img/main_cover_2.jpg)"></div>
               <div class="caption text-white">
                 <div class="container">
-                  <div class="row align-items-end justify-content-center vh-80 pb-4">
+                  <div class="row align-items-end justify-content-center vh-85 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
                 </div>  
               </div>
             </div>
-            <div class="swiper-slide vh-80">
+            <div class="swiper-slide vh-85">
               <div class="image image-overlay image-zoom" style="background-image:url(assets/img/main_cover_3.jpg)"></div>
               <div class="caption text-white">
                 <div class="container">
-                  <div class="row align-items-end justify-content-center vh-80 pb-4">
+                  <div class="row align-items-end justify-content-center vh-85 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
                 </div>  
               </div>
             </div>
-            <div class="swiper-slide vh-80">
+            <div class="swiper-slide vh-85">
               <div class="image image-overlay image-zoom" style="background-image:url(assets/img/main_cover_4.jpg)"></div>
               <div class="caption text-white">
                 <div class="container">
-                  <div class="row align-items-end justify-content-center vh-80 pb-4">
+                  <div class="row align-items-end justify-content-center vh-85 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
                 </div>  
               </div>
             </div>
-            <div class="swiper-slide vh-80">
+            <div class="swiper-slide vh-85">
               <div class="image image-overlay image-zoom" style="background-image:url(assets/img/main_cover_5.jpg)"></div>
               <div class="caption text-white">
                 <div class="container">
-                  <div class="row align-items-end justify-content-center vh-80 pb-4">
+                  <div class="row align-items-end justify-content-center vh-85 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
@@ -77,7 +72,7 @@
       </section>
       <!-- / cover -->
       
-      <section class="bg-white separator-bottom" data-top-top="transform: translateY(0px);" data-top-bottom="transform: translateY(200px);">
+      <section class="bg-white separator-bottom">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-10 col-lg-8">
