--- a/main.html
+++ b/main.html
@@ -72,16 +72,6 @@
       </section>
       <!-- / cover -->
       
-      <section class="bg-white separator-bottom">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-md-10 col-lg-8">
-              <h3 class="text-decorated text-decorated-padding">APLY will be the path to the next.</h3>
-            </div>
-          </div>
-        </div>
-      </section>
-      
       <!-- 회사 소개 -->      
       <section class="py-0">
         <div class="container">
@@ -89,9 +79,8 @@
             <div class="col-lg-12">
               <div class="row separated">
                 <div class="col-lg-6 py-8 pr-md-10">                  
-                  <h2 class="h2">APLY</h2>
+                  <h3 class="text-decorated text-decorated-padding">APLY</h3>
                   <p class="lead">Advanced platform to fly</p>
-                  <a href="/?p=about"><button type="button" class="btn btn-with-ico btn-secondary mt-2" data-aos="fade-up" data-aos-delay="30">Learn more  <i class="icon-arrow-right2"></i></button></a>
                 </div>
                 <div class="col-lg-6 py-8 pl-md-10 text-left">
                   <p class="text-dark mb-0">Vision, AR, Big Data, AI</p>
@@ -101,7 +90,6 @@
                   </p>
                   <p class="text-dark mb-0">We develop software</p>
                   <p class="mb-3">최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
-                  <a href="/?p=recruit"><div class="btn btn-secondary" data-aos="fade-up" data-aos-delay="50">채용 문의</div></a> 
                 </div>
               </div>
             </div>
