--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
       <!-- cover -->     
-      <section class="p-0" data-top-top="transform: translateY(0px);" data-top-bottom="transform: translateY(200px);">
+      <section class="p-0">
         <div class="swiper-container mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide vh-90">
@@ -79,17 +79,15 @@
             <div class="col-lg-12">
               <div class="row separated">
                 <div class="col-lg-6 py-8 pr-md-10">                  
-                  <h3 class="text-decorated text-decorated-padding">APLY</h3>
-                  <p class="lead">Advanced platform to fly</p>
+                  <h3 class="text-decorated text-decorated-padding">APLY<br />
+                    <span class="lead">Advanced platform to fly</span>
+                  </h3>                  
                 </div>
                 <div class="col-lg-6 py-8 pl-md-10 text-left">
-                  <p class="text-dark mb-0">Vision, AR, Big Data, AI</p>
-                  <p>
-                    데이터를 이해하고 가치를 발굴하며 인공지능을 디자인합니다.<br />
-                    데이터 분석/이상탐지(Anomaly Detection)/AR 기술을 기반으로 문제를 간편하게 확인하고 인사이트를 얻을 수 있는 방법을 제공합니다.
-                  </p>
                   <p class="text-dark mb-0">We develop software</p>
-                  <p class="mb-3">최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
+                  <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
+                  <p class="text-dark mb-0">Vision, AR, Big Data, AI</p>
+                  <p class="mb-3">데이터 분석/이상탐지(Anomaly Detection)/AR 기술을 기반으로 문제를 간편하게 확인하고 인사이트를 얻을 수 있는 방법을 제공합니다.</p>
                 </div>
               </div>
             </div>
