--- a/main.html
+++ b/main.html
@@ -78,89 +78,20 @@
           <div class="row justify-content-center">
             <div class="col-lg-12">
               <div class="row separated">
-                <div class="col-lg-6 py-8 pr-md-10">                  
+                <div class="col-lg-6 py-2 py-sm-8 pr-md-10">                  
                   <h3 class="text-decorated text-decorated-padding">APLY<br />
                     <span class="lead">Advanced platform to fly</span>
                   </h3>                  
                 </div>
-                <div class="col-lg-6 py-8 pl-md-10 text-left">
+                <div class="col-lg-6 py-2 py-sm-8 pl-md-10 text-left">
                   <p class="text-dark mb-0">We develop software</p>
-                  <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
                   <p class="text-dark mb-0">Vision, AR, Big Data, AI</p>
-                  <p class="mb-3">데이터 분석/이상탐지(Anomaly Detection)/AR 기술을 기반으로 문제를 간편하게 확인하고 인사이트를 얻을 수 있는 방법을 제공합니다.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section> 
-      
-      <!-- partners -->     
-      <section class="separator-top">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-md-6 text-center mb-3">
-              <span class="eyebrow mb-2 text-primary">Our Partners</span>
-              <h5 class="fs-18">APLY는 업무 협약 및 제휴를 통해<br />기술의 전문성을 높이고 활동 영역을 확장합니다.</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col partners align-items-center">
-              <div class="owl-carousel" data-aos="zoom-in" data-items="[6,4,2]" data-loop="true" data-autoplay="true">
-                <div class="logo">
-                  <a href="//www.msit.go.kr" target="_blank"><img src="assets/img/partners_logo_s&t.png" class="bordered border-secondary p-1" alt="과학기술정보통신부" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//www.mss.go.kr" target="_blank"><img src="assets/img/partners_logo_smes.png" class="bordered border-secondary p-1" alt="중소기업벤처부" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//www.kipo.go.kr" target="_blank"><img src="assets/img/partners_logo_kipo.png" class="bordered border-secondary p-1" alt="특허청" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//www.gcon.or.kr" target="_blank"><img src="assets/img/partners_logo_gca.png" class="bordered border-secondary p-1" alt="경기콘텐츠진흥원" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//www.kidp.or.kr" target="_blank"><img src="assets/img/partners_logo_kidp.png" class="bordered border-secondary p-1" alt="한국디자인진흥원" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//kiat.or.kr" target="_blank"><img src="assets/img/partners_logo_kiat.png" class="bordered border-secondary p-1" alt="한국산업기술진흥원" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//www.kibo.or.kr" target="_blank"><img src="assets/img/partners_logo_kibo.png" class="bordered border-secondary p-1" alt="기술보증기금" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//ccei.creativekorea.or.kr/jeju" target="_blank"><img src="assets/img/partners_logo_jeju.png" class="bordered border-secondary p-1" alt="제주창조경제혁신센터" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//www.jdcenter.com" target="_blank"><img src="assets/img/partners_logo_jdc.png" class="bordered border-secondary p-1" alt="제주국제자유도시개발센터" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//startupbay.or.kr" target="_blank"><img src="assets/img/partners_logo_startupbay.png" class="bordered border-secondary p-1" alt="제주스타트업베이" /></a>
-                </div>                  
-                <div class="logo">
-                  <a href="//mysc.co.kr" target="_blank"><img src="assets/img/partners_logo_mysc.png" class="bordered border-secondary p-1" alt="엠와이소셜컴퍼니" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//companya.kr/" target="_blank"><img src="assets/img/partners_logo_companyA.png" class="bordered border-secondary p-1" alt="엑셀러레이터 컴퍼니에이" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//k-vic.co.kr" target="_blank"><img src="assets/img/partners_logo_kivc.png" class="bordered border-secondary p-1" alt="한국벤처투자(주)" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//mojongsijang.com/" target="_blank"><img src="assets/img/partners_logo_gapjone.png" class="bordered border-secondary p-1" alt="갑조네" /></a>
-                </div>
-                <div class="logo">
-                  <a href="//www.cku.ac.kr" target="_blank"><img src="assets/img/partners_logo_cku.png" class="bordered border-secondary p-1" alt="가톨릭관동대학교" /></a>
-                </div>                
-                <div class="logo">
-                  <a href="//www.gw.ac.kr" target="_blank"><img src="assets/img/partners_logo_gsu.png" class="bordered border-secondary p-1" alt="강원도립대학교" /></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>      
-      <!-- / partners -->      
+      </section>     
       
       <script>
         var swiper = new Swiper(".mySwiper", {
