--- a/main.html
+++ b/main.html
@@ -78,14 +78,13 @@
           <div class="row justify-content-center">
             <div class="col-lg-12">
               <div class="row separated">
-                <div class="col-lg-6 py-3 py-sm-8 pr-md-10">                  
+                <div class="col-lg-6 py-3 py-sm-8 pr-md-4">                  
                   <h3 class="text-decorated text-decorated-padding">APLY<br />
                     <span class="lead">Advanced platform to fly</span>
                   </h3>                  
                 </div>
-                <div class="col-lg-6 py-3 py-sm-8 pl-md-10 text-center">
-                  <span class="eyebrow mb-2 text-primary">Our Partners</span>
-                  <h5 class="fs-18">APLY는 업무 협약 및 제휴를 통해<br />기술의 전문성을 높이고 활동 영역을 확장합니다.</h5>
+                <div class="col-lg-6 py-3 py-sm-8 pl-md-3 text-center">
+                  <span class="eyebrow mb-2">Our Partners</span>
 
                   <div class="row">
                     <div class="col partners align-items-center">
