--- a/main.html
+++ b/main.html
@@ -76,18 +76,13 @@
       <section class="py-0">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-lg-12">
-              <div class="row separated">
-                <div class="col-lg-6 py-3 py-sm-8 pr-md-10">                  
-                  <h3 class="text-decorated text-decorated-padding">APLY<br />
-                    <span class="lead">Advanced platform to fly</span>
-                  </h3>                  
-                </div>                
-                <div class="col-lg-6 py-8 pl-md-10 text-left">
-                  <p class="eyebrow text-dark mb-0">We develop software.</p>
-                  <p class="text-gray">Vision, AR, Big Data, AI 기술을 기반으로 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
-                </div>      
-              </div>
+            <div class="col-lg-8 py-3 py-sm-8 text-left">         
+              <h3 class="text-decorated text-decorated-padding">
+                APLY<br />
+                <span class="lead">Advanced platform to fly</span>
+              </h3>                  
+              <p class="eyebrow text-dark my-1">We develop software.</p>
+              <p class="eyebrow text-muted">Vision, AR, Big Data, AI 기술을 기반으로 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
             </div>
           </div>
         </div>
