main page updated

--- a/main.html
+++ b/main.html
@@ -79,10 +79,12 @@
             <div class="col-lg-8 py-3 py-sm-8 text-left">         
               <h3 class="text-decorated text-decorated-padding">
                 APLY<br />
-                <span class="lead">Advanced platform to fly</span>
-              </h3>                  
-              <p class="eyebrow text-dark my-1">We develop software.</p>
-              <p class="eyebrow text-muted">Vision, AR, Big Data, AI 기술을 기반으로 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.</p>
+                <span class="lead">Advanced platform to fly</span>                               
+                <p class="eyebrow text-muted mt-2">
+                  We develop software.<br />
+                  Vision, AR, Big Data, AI 기술을 기반으로 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.
+                </p>
+              </h3>   
             </div>
           </div>
         </div>
