--- a/main.html
+++ b/main.html
@@ -81,8 +81,7 @@
                 APLY<br />
                 <span class="lead">Advanced platform to fly</span>                               
                 <p class="eyebrow text-muted mt-2">
-                  We develop software.<br />
-                  Vision, AR, Big Data, AI 기술을 기반으로 문제와 요구사항을 정확하게 이해하여 편리하게 사용할 수 있는 소프트웨어를 개발합니다.
+                  We develop software.
                 </p>
               </h3>   
             </div>
