main page updated

--- a/main.html
+++ b/main.html
@@ -79,10 +79,8 @@
             <div class="col-lg-8 py-3 py-sm-8 text-left">         
               <h3 class="text-decorated text-decorated-padding">
                 APLY<br />
-                <span class="lead">Advanced platform to fly</span>                               
-                <p class="eyebrow text-muted mt-2">
-                  We develop software.
-                </p>
+                <span class="eyebrow mt-2">Advanced platform to fly.</span>                               
+                <span class="eyebrow">We develop software.</span>
               </h3>   
             </div>
           </div>
