--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         
     <!-- footer (고정됨) -->    
     <footer class="bg-dark text-white">
-      <div class="separator-bottom py-3 py-sm-5">
+      <div class="separator-bottom pt-3 pb-2 py-sm-5">
         <div class="container">
           <div class="row justify-content-between align-items-center">
             <div class="col-md-5 text-center text-md-left">
