main page updated

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">Only, Software.</h1>
-                      <div class="mouse"></div>
+                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -22,7 +22,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <div class="mouse"></div>
+                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -35,7 +35,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <div class="mouse"></div>
+                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -48,7 +48,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <div class="mouse"></div>
+                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -61,7 +61,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <div class="mouse"></div>
+                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -70,22 +70,7 @@
           </div>
         </div>
       </section>
-      <!-- / cover -->
-      
-      <!-- 회사 소개 -->      
-      <section class="py-0">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8 py-3 py-sm-8 text-left">         
-              <h3 class="text-decorated text-decorated-padding">
-                APLY<br />
-                <span class="eyebrow mt-2">Advanced platform to fly.</span>                               
-                <span class="eyebrow">We develop software.</span>
-              </h3>   
-            </div>
-          </div>
-        </div>
-      </section>     
+      <!-- / cover --> 
       
       <script>
         var swiper = new Swiper(".mySwiper", {
