--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav align-items-center mr-auto">
+              <li class="nav-item" id="menu_home"><a href="#main" class="nav-link">홈</a></li>
               <li class="nav-item" id="menu_about"><a href="#about" class="nav-link">회사소개</a></li>
               <li class="nav-item" id="menu_service"><a href="#service" class="nav-link">서비스</a></li>
               <li class="nav-item" id="menu_team"><a href="#team" class="nav-link">팀</a></li>              
