--- a/service.html
+++ b/service.html
@@ -79,7 +79,7 @@
          <div class="row justify-content-center text-center">
            <div class="col-lg-10">
              <h1 class="font-weight-bold">서비스</h1>
-             <p class="lead">AR과 AI에 특화된 APLY 기술이 여러분의 일상에 함께 합니다.</p>
+             <p class="lead">APLY의 ICT 기술이 여러분의 일상에 함께 합니다.</p>
            </div>
          </div>
        </div>
@@ -112,8 +112,8 @@
            <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
              <h5 class="font-weight-bold">AQR<span class="font-weight-light text-black-50 pl-2">에이큐알</span></h5>
              <p class="pb-4">
-               다양한 QR과 링크를 하나로.<br />계좌번호 노출 없이 고유 QR과 URL로 입금 요청.<br />
-               뛰어난 QR 인식 기능성, 모던한 메탈 재질의 AQR 플레이트 판매.
+              다양한 페이. SNS 링크. 간편 송금.<br>
+              하나의 QR과 URL에.
              </p>
              <a href="//aqr.aplx.link" target="_blank">
                <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
@@ -128,7 +128,7 @@
           </div>
           <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
             <h5 class="font-weight-bold">AQR-M<span class="font-weight-light text-black-50 pl-2">에이큐알M</span></h5>
-            <p class="pb-4">QR 기반 Mass Production 관리 솔루션.<br />대량의 인프라/설비를 스마트하게 관리하기 위한 진보된 솔루션.</p>
+            <p class="pb-4">QR 기반 Mass Production 관리 솔루션.</p>
             <a href="//aqr-m.aplx.link" target="_blank">
               <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
             </a>
