서비스 문구 수정

--- a/service.html
+++ b/service.html
@@ -173,7 +173,7 @@
              <div class="row">
                <div class="col-lg-8">
                  <h2 class="mb-1 font-weight-bold">APLY Lab</h2>
-                 <p class="lead">작은 기술 빅 재미, APLY의 재미있는 서비스</p>
+                 <p class="lead">작은 기술 빅 재미, APLY가 제공하는 유용한 서비스</p>
                </div>
              </div>
              <div class="row gutter-0">
