contact 화면의 문구 수정

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,6 @@
                <div class="col-md-6 py-10 pl-md-10 text-center text-md-left">
                  <i class="icon-question fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                  <h5 class="font-weight-normal">상담 및 문의</h5>
-                 <p class="mb-4">문의 내용을 작성해주세요.</p>                 
                  
                  <!-- 문의하기 폼 -->
                  <form role="form" method="post" id="email_up"> 
@@ -105,7 +104,7 @@
                    </div>    
                    <div class="row justify-content-center mb-2">
                      <div class="col-md-6 text-center justify-content-center">
-                       <button class="btn btn-primary btn-block" id="email_up_send">Send</button>
+                       <button class="btn btn-primary btn-block" id="email_up_send">보내기</button>
                        <div class="loadingio-spinner">
                         <div class="ldio-ec10op87166"><div></div></div>
                       </div>
