footer 메뉴에 si 항목 추가

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <li><a href="//aqr.aplx.link"  class="text-dark font-weight-light" target="_blank">AQR</a></li>
                 <li><a href="//aqr-m.aplx.link"  class="text-dark font-weight-light" target="_blank">AQR-M</a></li>
                 <li><a href="//smartstore.naver.com/aqr"  class="text-dark font-weight-light" target="_blank">AQR 플레이트</a></li>
+                <li><a href="//si.aply.biz"  class="text-dark font-weight-light" target="_blank">System Integration</a></li>
               </ul>
             </div>
             <div class="col-md-5 text-center text-md-right">
