서명 디자인 수정4

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -496,7 +496,7 @@
     <!-- Scripts-->
     <script src="../assets/js/custom/jquery-3.2.1.min.js"></script>
     <script src="./js/clipboard.min.js"></script>
-    <script src="./js/aply_sign.js?v=20230823"></script>
+    <script src="./js/aply_sign.js?v=20241202_01"></script>
     <script src="../assets/js/aplyServices.js?v=20241026_01"></script>
     <script>        
         $(function() {            
