--- a/recruit.html
+++ b/recruit.html
@@ -1,129 +1,132 @@
-      <!-- cover -->     
-      <section class="p-0">
-        <div class="swiper-container text-white">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide vh-90">
-              <div id="ytbg1" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=3pXgq7lEH1U"></div>
-              <div class="caption">
-                <div class="container">
-                  <div class="row align-items-center justify-content-center vh-90">
-                    <div class="col-12 text-center">
-                      <p class="lead mb-2 text-white">즐겁게 일하는 진보된 플랫폼</p>
-                      <h1 class="h2 font-weight-bold">APLY의 팀원이 되실 분을 기다립니다.</h1>
-                    </div>
-                  </div>
-                </div>  
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- / cover --> 
-      
-      <section class="pt-8 pb-8">
-        <div class="container">
-          <div class="bordered p-4">
-            <div class="row justify-content-between align-items-center text-center text-md-left">
-              <div class="col-md-2 text-center">
-                <i class="fas fa-user-circle fs-60" style="color:#0030AE;"></i>
-              </div>
-              <div class="col-md-10 text-center">
-                <h3 class="mb-1">지금은 채용기간이 아닙니다.</h3>
-                <p>APLY를 방문해주셔서 감사합니다. 연락처를 남겨주시면 채용계획이 있을 때 연락드리겠습니다.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- 채용 문의 -->
-      <section class="bg-light pt-10 pb-10" id="recruit-section">
-        <div class="container">
-          <form role="form" method="post" id="recruit_form">
-            <div class="row mb-8">
+<!-- cover -->
+<section class="p-0">
+  <div class="swiper-container text-white">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide vh-90">
+        <div id="ytbg1" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=3pXgq7lEH1U"></div>
+        <div class="caption">
+          <div class="container">
+            <div class="row align-items-center justify-content-center vh-90">
               <div class="col-12 text-center">
-                <h4><b>연락처 남기기</b></h4>
-                <p class="lead">먼저 관심 직군을 선택한 후 연락처를 남겨주세요.</p>
-              </div>
-            </div>            
-            <div class="row justify-content-center mb-2">
-              <div class="col-lg-2 mb-1">
-                <input type="checkbox" name="min_type_1" id="m_1" value="SW개발">
-                <label class="lab_check" for="m_1"><span class="checkbox"></span></label>
-                <span>SW 개발</span>
-              </div>
-              <div class="col-lg-2 mb-1">
-                <input type="checkbox" name="min_type_2" id="m_2" value="데이터 분석">
-                <label class="lab_check" for="m_2"><span class="checkbox"></span></label>
-                <span>데이터 분석</span>
-              </div>
-              <div class="col-lg-2 mb-1">
-                <input type="checkbox" name="min_type_3" id="m_3" value="제작">
-                <label class="lab_check" for="m_3"><span class="checkbox"></span></label>
-                <span>HW 개발</span>
-              </div>
-              <div class="col-lg-2 mb-1">
-                <input type="checkbox" name="min_type_4" id="m_4" value="체험">
-                <label class="lab_check" for="m_4"><span class="checkbox"></span></label>
-                <span>마케팅</span>
-              </div>
-              <div class="col-lg-2 mb-1">
-                <input type="checkbox" name="min_type_5" id="m_5" value="체험">
-                <label class="lab_check" for="m_5"><span class="checkbox"></span></label>
-                <span>디자인</span>
-              </div>
-              <div class="col-lg-2">
-                <input type="checkbox"  name="min_type_6" id="m_6" value="체험">
-                <label class="lab_check" for="m_6"><span class="checkbox"></span></label>
-                <span>기획</span>
-              </div>
-              <p class="help-block text-danger"></p>
-            </div>
-            <div class="row justify-content-center border-bottom pb-4 mb-4">
-              <div class="col-lg-4">
-                <div class="form-group">
-                  <input class="form-control" type="text" name="form_name" placeholder="이름" required="">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="form-group">
-                  <input class="form-control" type="text" name="form_phone" placeholder="전화번호(-없이 입력해주세요)" required="" pattern="\d+">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="form-group">
-                  <input class="form-control" type="text" name="form_email" placeholder="이메일 주소" required="">
-                  <p class="help-block text-danger"></p>
-                </div>
+                <p class="lead mb-2 text-white">즐겁게 일하는 진보된 플랫폼</p>
+                <h1 class="h2 font-weight-bold">APLY의 팀원이 되실 분을 기다립니다.</h1>
               </div>
             </div>
-            <div class="row justify-content-center mb-4">
-              <div class="col-md-9 text-center">
-                <input type="checkbox" name="agree_1" id="recruit_agree_1" value="제공">
-                <label class="lab_check" for="recruit_agree_1"><span class="checkbox"></span></label>
-                <a href="javascript:showPrivacyDialog();">개인정보 처리방침</a> 동의 <span class="required">(필수)</span>
-                <input type="hidden" name="form_token">
-                <input type="hidden" name="form_kind" value="recruit">
-              </div>
-            </div>
-            <div class="row justify-content-center mb-6">
-              <div class="col-md-4 textg-center justify-content-center">
-                <button class="btn btn-primary btn-block" id="recruit_form_send">Send</button>
-                <div class="loadingio-spinner">
-                  <div class="ldio-ec10op87166"><div></div></div>
-                </div>
-              </div>
-
-              이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://www.cloudflare.com/ko-kr/website-terms/' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.
-            </div>
-          </form>
+          </div>
         </div>
-      </section>
-      
-      <script>
-        jQuery(document).ready(function () {
-          $('[data-youtube]').youtube_background();
-        });
-      </script>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- / cover -->
+
+<section class="pt-8 pb-8">
+  <div class="container">
+    <div class="bordered p-4">
+      <div class="row justify-content-between align-items-center text-center text-md-left">
+        <div class="col-md-2 text-center">
+          <i class="fas fa-user-circle fs-60" style="color:#0030AE;"></i>
+        </div>
+        <div class="col-md-10 text-center">
+          <h3 class="mb-1">지금은 채용기간이 아닙니다.</h3>
+          <p>APLY를 방문해주셔서 감사합니다. 연락처를 남겨주시면 채용계획이 있을 때 연락드리겠습니다.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- 채용 문의 -->
+<section class="bg-light pt-10 pb-10" id="recruit-section">
+  <div class="container">
+    <form role="form" method="post" id="recruit_form">
+      <div class="row mb-8">
+        <div class="col-12 text-center">
+          <h4><b>연락처 남기기</b></h4>
+          <p class="lead">먼저 관심 직군을 선택한 후 연락처를 남겨주세요.</p>
+        </div>
+      </div>
+      <div class="row justify-content-center mb-2">
+        <div class="col-lg-2 mb-1">
+          <input type="checkbox" name="form_contact_min_type_1" id="m_1" value="SW 개발">
+          <label class="lab_check" for="m_1"><span class="checkbox"></span></label>
+          <span>SW 개발</span>
+        </div>
+        <div class="col-lg-2 mb-1">
+          <input type="checkbox" name="form_contact_min_type_2" id="m_2" value="데이터 분석">
+          <label class="lab_check" for="m_2"><span class="checkbox"></span></label>
+          <span>데이터 분석</span>
+        </div>
+        <div class="col-lg-2 mb-1">
+          <input type="checkbox" name="form_contact_min_type_3" id="m_3" value="HW 개발">
+          <label class="lab_check" for="m_3"><span class="checkbox"></span></label>
+          <span>HW 개발</span>
+        </div>
+        <div class="col-lg-2 mb-1">
+          <input type="checkbox" name="form_contact_min_type_4" id="m_4" value="마케팅">
+          <label class="lab_check" for="m_4"><span class="checkbox"></span></label>
+          <span>마케팅</span>
+        </div>
+        <div class="col-lg-2 mb-1">
+          <input type="checkbox" name="form_contact_min_type_5" id="m_5" value="디자인">
+          <label class="lab_check" for="m_5"><span class="checkbox"></span></label>
+          <span>디자인</span>
+        </div>
+        <div class="col-lg-2">
+          <input type="checkbox" name="form_contact_min_type_6" id="m_6" value="기획">
+          <label class="lab_check" for="m_6"><span class="checkbox"></span></label>
+          <span>기획</span>
+        </div>
+        <p class="help-block text-danger"></p>
+      </div>
+      <div class="row justify-content-center border-bottom pb-4 mb-4">
+        <div class="col-lg-4">
+          <div class="form-group">
+            <input class="form-control" type="text" name="form_contact_name" placeholder="이름" required="">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="form-group">
+            <input class="form-control" type="text" name="form_contact_phone" placeholder="전화번호(-없이 입력해주세요)" required=""
+              pattern="\d+">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="form-group">
+            <input class="form-control" type="text" name="form_contact_email" placeholder="이메일 주소" required="">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center mb-4">
+        <div class="col-md-9 text-center">
+          <input type="checkbox" name="agree_1" id="agree_1" value="제공">
+          <label class="lab_check" for="agree_1"><span class="checkbox"></span></label>
+          <a style="cursor:pointer;" id="form_contact_privacy_link">개인정보 처리방침</a> 동의 <span class="required">(필수)</span>
+        </div>
+      </div>
+      <div class="row justify-content-center mb-6">
+        <div class="col-md-4 textg-center justify-content-center">
+          <button class="btn btn-primary btn-block" id="form_contact_send">Send</button>
+          <div id="form_contact_send_loading" class="loadingio-spinner">
+            <div class="ldio-ec10op87166">
+              <div></div>
+            </div>
+          </div>
+        </div>
+
+        이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/'
+          style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a
+          href='https://www.cloudflare.com/ko-kr/website-terms/' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.
+      </div>
+    </form>
+  </div>
+</section>
+
+<script>
+  jQuery(document).ready(function () {
+    $('[data-youtube]').youtube_background();
+  });
+</script>
