contact, captcha 등의 관련 코드 리팩토링 - 7 - test

--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
 
                 <div class="col-12 text-center">
                   <div class="form-group">
-                    <input type="checkbox" name="agree_1" id="agree_1" value="제공">
-                    <label class="lab_check" for="agree_1"><span class="checkbox"></span></label>
+                    <input type="checkbox" name="form_contact_agree_1" id="form_contact_agree_1" value="제공">
+                    <label class="lab_check" for="form_contact_agree_1"><span class="checkbox"></span></label>
                     <a style="cursor:pointer;" id="form_contact_privacy_link">개인정보 처리방침</a> 동의 <span
                       class="required">(필수)</span>
                   </div>
