recurit 의 보내기 버튼 하단 개인정보 문구 수정

--- a/recruit.html
+++ b/recruit.html
@@ -114,11 +114,9 @@
               <div></div>
             </div>
           </div>
-        </div>
 
-        이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/'
-          style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a
-          href='https://www.cloudflare.com/ko-kr/website-terms/' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.
+          이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://www.cloudflare.com/ko-kr/website-terms/' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.
+        </div>        
       </div>    
   </div>
 </section>
