이메일 무단 수집 거부 dialog 추가

--- a/index.html
+++ b/index.html
@@ -212,12 +212,10 @@
     <script src="assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
     <script src="assets/js/aplyServices.js?v=20250131_02"></script>
     <script src="assets/js/app.js"></script>
-
-    <!-- 새로 작업한 JS 입니다 -->            
     <script>
-      function showEmailPolicyDialog() {        
-        $('#modal-content').load("emailpolicy.html");
-        $('#modal-1').modal('show');
+      function showEmailPolicyDialog() {
+        $('#contact_privacy_body_content').load("emailpolicy.html");
+        $('#contactPrivacyDialog').modal('show');
       }
     </script>
     
