--- a/recruit.html
+++ b/recruit.html
@@ -114,10 +114,13 @@
               <div></div>
             </div>
           </div>
-
+        </div>
+      </div>
+      <div class="row justify-content-center mb-6">
+        <div class="col-12 fs-14 text-center">
           이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://www.cloudflare.com/ko-kr/website-terms/' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.
-        </div>        
-      </div>    
+        </div>
+      </div>
   </div>
 </section>
 
