--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
+                      <p class="lead mb-8 text-white">APLY는 진보된 SW 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -22,7 +22,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
+                      <p class="lead mb-8 text-white">APLY는 진보된 SW 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -35,7 +35,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
+                      <p class="lead mb-8 text-white">APLY는 진보된 SW 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -48,7 +48,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
+                      <p class="lead mb-8 text-white">APLY는 진보된 SW 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
@@ -61,7 +61,7 @@
                   <div class="row align-items-end justify-content-center vh-90 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
-                      <p class="lead mb-8 text-white">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
+                      <p class="lead mb-8 text-white">APLY는 진보된 SW 플랫폼입니다.</p>
                     </div>
                   </div>
                 </div>  
