--- a/team.html
+++ b/team.html
@@ -199,7 +199,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-10 col-lg-8">
-              <h4 class="text-decorated text-decorated-padding">즐겁게 일하는 진보된 플랫폼 APLY의  팀원이 되실 분을 기다립니다.</h4>
+              <h4 class="text-decorated text-decorated-padding">진보된 SW 플랫폼 APLY의  팀원이 되실 분을 기다립니다.</h4>
             </div>
           </div>
           <div class="row justify-content-center text-center">
