--- a/recruit.html
+++ b/recruit.html
@@ -8,7 +8,7 @@
           <div class="container">
             <div class="row align-items-center justify-content-center vh-90">
               <div class="col-12 text-center">
-                <p class="lead mb-2 text-white">즐겁게 일하는 진보된 플랫폼</p>
+                <p class="lead mb-2 text-white">진보된 SW 플랫폼</p>
                 <h1 class="h2 font-weight-bold">APLY의 팀원이 되실 분을 기다립니다.</h1>
               </div>
             </div>
