--- a/about.html
+++ b/about.html
@@ -45,6 +45,19 @@
                   <div class="accordion-group accordion-group-steps text-white" data-accordion-group>
                     <div class="accordion open" data-accordion>
                       <div class="accordion-control" data-control>
+                        <h5>2025년</h5>
+                      </div>
+                      <div class="accordion-content" data-content>
+                        <div class="accordion-content-wrapper">
+                          <p>
+                            <span>2월</span><br />                            
+                            AQR 서비스 누적 사용자 수 40만 명 돌파
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion" data-accordion>
+                      <div class="accordion-control" data-control>
                         <h5>2024년</h5>
                       </div>
                       <div class="accordion-content" data-content>
@@ -54,7 +67,7 @@
                             식물 전문 기술 및 이커머스 기업 (주)갑조네와 제휴협약,<br />
                             AQR 서비스 등록 계좌 정보 1만 개 돌파
                           </p>
-                        </div>                        
+                        </div>
                       </div>
                     </div>
                     <div class="accordion" data-accordion>
