--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,14 @@
                   </div>
                 </div>
 
+                <div class="col-12 text-left small mt-1">
+                  - 긴급한 사항일 경우에만 전화로 연락드립니다.<BR>
+                  - 궁금하신 내용을 정확하고 구체적으로 작성해 주시면 빠르게 답변을 받으실 수 있습니다.<BR>
+                  - 이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/'
+                    target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://www.cloudflare.com/ko-kr/website-terms/'
+                    target='_blank'>서비스 약관</a>이 적용됩니다.
+                </div>
+
                 <div class="col-12 text-center">
                   <div class="form-group">
                     <input type="checkbox" name="form_contact_agree_1" id="form_contact_agree_1" value="제공">
@@ -109,7 +117,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row justify-content-center mb-2">
+              <div class="row justify-content-center mb-6">
                 <div class="col-md-6 text-center justify-content-center">
                   <button class="btn btn-primary btn-block" id="form_contact_send">보내기</button>
                   <div id="form_contact_send_loading" class="loadingio-spinner">
@@ -118,15 +126,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="row justify-content-center mb-6">
-                <div class="col-12 fs-14 text-center">
-                  이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/'
-                    style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a
-                    href='https://www.cloudflare.com/ko-kr/website-terms/' style='color:#333;' target='_blank'>서비스
-                    약관</a>이 적용됩니다.
-                </div>
-              </div>
+              </div>              
             <!-- / 문의하기 폼 -->
           </div>
         </div>
