--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                 <div class="col-12 text-left small mt-1">
                   <ul>
                     <li>긴급한 사항일 경우에만 전화로 연락드립니다.</li>
-                    <li>궁금하신 내용을 정확하고 구체적으로 작성해 주시면 빠르게 답변을 받으실 수 있습니다.</li>
+                    <li>궁금하신 내용을 정확하고 구체적으로 작성해 주시면 빠르게 답신을 받으실 수 있습니다.</li>
                     <li>이 사이트는 Turnstile의 보호를 받으며 Cloudflare <a href='https://www.cloudflare.com/ko-kr/privacypolicy/'
                       target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://www.cloudflare.com/ko-kr/website-terms/'
                       target='_blank'>서비스 약관</a>이 적용됩니다.</li>
