회사소개 - 내용 추가

--- a/about.html
+++ b/about.html
@@ -175,6 +175,26 @@
                  </footer>
                </blockquote>
                <blockquote class="blockquote blockquote-1">
+                 <p>AI 기반 지식재산권 분석 서비스</p>
+                 <footer class="blockquote-footer">
+                   <div class="media align-items-center">
+                     <div class="media-body ml-2">
+                       <span class="d-block mb-0 text-black">T 기업</span>
+                     </div>
+                   </div>
+                 </footer>
+               </blockquote>
+               <blockquote class="blockquote blockquote-1">
+                 <p>증강현실 기반 미술 작품 안내 서비스</p>
+                 <footer class="blockquote-footer">
+                   <div class="media align-items-center">
+                     <div class="media-body ml-2">
+                       <span class="d-block mb-0 text-black">정은혜, 김미경 작가</span>
+                     </div>
+                   </div>
+                 </footer>
+               </blockquote>
+               <blockquote class="blockquote blockquote-1">
                  <p>QGroundControl 기반 GCS, 드론스테이션 제어 시스템 개발 및 컨설팅</p>
                  <footer class="blockquote-footer">
                    <div class="media align-items-center">
