about 페이지 3번째 섹션 문구 수정

--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
                <div class="col-md-6 py-10 pl-md-10 text-center text-md-left bg-white">
                  <i class="fas fa-object-group fs-40 text-primary mb-2"></i>
                  <h5 class="font-weight-normal">서비스 및 솔루션 기획/디자인/개발</h5>
-                 <p>Android/iOS/Linux/Windows/MacOS 등 멀티 플랫폼 SW/FW 개발</p>
-                 <p>홍보 및 서비스용 웹사이트</p>                 
+                 <p>AI 기반 서비스 및 솔루션</p>
+                 <p>Android/iOS/Linux/Windows/MacOS/웹 등 다양한 플랫폼 기반 SW/FW</p>
                </div>
              </div>
            </div>
