하단링크 수정

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <li><a href="//aplx.link" class="text-dark font-weight-light" target="_blank">APLX</a></li>
                 <li><a href="//aqr.aplx.link"  class="text-dark font-weight-light" target="_blank">AQR</a></li>
                 <li><a href="//aqr-m.aplx.link"  class="text-dark font-weight-light" target="_blank">AQR-M</a></li>
-                <li><a href="//aqrshop.com"  class="text-dark font-weight-light" target="_blank">AQR Shop</a></li>
+                <li><a href="//smartstore.naver.com/aqr"  class="text-dark font-weight-light" target="_blank">AQR Smartstore</a></li>
                 <li><a href="//si.aply.biz"  class="text-dark font-weight-light" target="_blank">System Integration</a></li>
               </ul>
             </div>
