about 페이지 문굿 ㅜ정

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           </div>
           <div class="col-md-6 py-10 pl-md-10 text-center text-md-left bg-white">
             <i class="fas fa-object-group fs-40 text-primary mb-2"></i>
-            <h5 class="font-weight-normal">서비스 및 솔루션 기획/디자인/개발</h5>
+            <h5 class="font-weight-normal">SW</h5>
             <p>AI 기반 서비스 및 솔루션</p>
             <p>Android/iOS/Linux/Windows/MacOS/웹 등 다양한 플랫폼 기반 SW/FW</p>
           </div>
@@ -58,7 +58,7 @@
         <div class="row separated">
           <div class="col-md-6 py-10 pl-md-10 text-center text-md-left bg-white">
             <i class="fas fa-file-code fs-40 text-primary mb-2"></i>
-            <h5 class="font-weight-normal">증강현실(AR) SW 개발</h5>
+            <h5 class="font-weight-normal">AR</h5>
             <p>Android, iOS 기반 AR 앱</p>
             <p>three.js, aframe 활용 Web AR</p>
             <p>전시/홍보/커뮤니케이션 솔루션</p>
@@ -82,7 +82,7 @@
           </div>
           <div class="col-md-6 py-10 pl-md-10 text-center text-md-left bg-white">
             <i class="fas fa-file-code fs-40 text-primary mb-2"></i>
-            <h5 class="font-weight-normal">드론/로봇 제어, 모니터링 시스템 컨설팅 및 SW 개발</h5>
+            <h5 class="font-weight-normal">Drone</h5>
             <p>GCS 설계</p>
             <p>DJI 솔루션 기반 SW (MSDK, PSDK, Cloud API)</p>
             <p>ROS2, PX4, Mavlink 기반 SW</p>
