about 페이지 문구 수정

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
           </div>
           <div class="col-md-6 py-10 pl-md-10 text-center text-md-left bg-white">
             <i class="fas fa-file-code fs-40 text-primary mb-2"></i>
-            <h5 class="font-weight-normal">Drone</h5>
+            <h5 class="font-weight-normal">Drone & Robot</h5>
             <p>GCS 설계</p>
             <p>DJI 솔루션 기반 SW (MSDK, PSDK, Cloud API)</p>
             <p>ROS2, PX4, Mavlink 기반 SW</p>
