--- a/about.html
+++ b/about.html
@@ -207,6 +207,16 @@
               </div>
             </footer>
           </blockquote>
+          <blockquote class="blockquote blockquote-1">
+            <p>간편한 송금 기능을 제공하는 Link-in-bio 서비스 : AQR</p>
+            <footer class="blockquote-footer">
+              <div class="media align-items-center">
+                <div class="media-body ml-2">
+                  <span class="d-block mb-0 text-black">APLY</span>
+                </div>
+              </div>
+            </footer>
+          </blockquote>
         </div>
       </div>
     </div>
