about 페이지에 history 추가

--- a/about.html
+++ b/about.html
@@ -244,6 +244,18 @@
                 <div class="accordion-content" data-content>
                   <div class="accordion-content-wrapper">
                     <p>
+                      <span>11월</span><br />
+                      (주)더케이팝타워와 운영 서비스 개발 및 공급 계약
+                    </p>
+                  </div>
+                  <div class="accordion-content-wrapper">
+                    <p>
+                      <span>8월</span><br />
+                      케이뱅크와 서비스 공급 계약
+                    </p>
+                  </div>
+                  <div class="accordion-content-wrapper">
+                    <p>
                       <span>7월</span><br />
                       동행복권과 서비스 공급 계약
                     </p>
