안내 문구 수정

--- a/about.html
+++ b/about.html
@@ -321,7 +321,7 @@
                     </p>
                     <p>
                       <span>11월</span><br />
-                      간편 송금 지원 서비스 'AQR' 론칭
+                      간편 입금 요청 서비스 'AQR' 론칭
                     </p>
                     <p>
                       <span>10월</span><br />
